[B]Version 1.0.1[/B]
- Updated to use new login system on yousee.tv

[B]Version 1.0.0[/B]
- Initial release.