@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="plugin.video.yousee.tv" version="1.0.1" name="YouSee Web-tv" provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.yousee.tv" version="1.0.2" name="YouSee web-tv" provider-name="twinther [tommy@winther.nu]">
     <requires>
         <import addon="xbmc.python" version="1.0"/>
         <import addon="script.module.danishaddons" version="1.1.0"/>
@@ -9,8 +9,12 @@
         <provides>video</provides>
     </extension>
     <extension point="xbmc.addon.metadata">
-        <summary>Web-tv fra YouSee</summary>
-        <description>Se de tv kanaler som du også har adgang til fra www.yousee.tv. Kræver login på yousee.tv</description>
+        <summary lang="en">Web-tv fra YouSee</summary>
+        <summary lang="da">Web-tv fra YouSee</summary>
+        <description lang="en">Watch the channel you have access to on YouSee.tv. Login required.</description>
+        <description lang="da">Se de tv kanaler som du har adgang til via YouSee.tv. Login påkrævet.</description>
+        <disclaimer lang="en">Some parts of this addon may not be legal in your country of residence - please check with your local laws.</disclaimer>
+        <disclaimer lang="da">Nogle dele af denne addon er muligvis ikke lovlig i dit land - kontroller venligst dine lokale love.</disclaimer>
         <platform>all</platform>
     </extension>
 </addon>
